fix: fixing activation code error
