# src/routes/api.ts
@@ -1,6 +1,5 @@
 import express from "express";
 import authController from "../controllers/auth.controller";
-import dummyController from "../controllers/dummy.controller";
 
 import authMiddleware from "../middlewares/auth.middleware";
 
@@ -9,8 +8,7 @@ const router = express.Router();
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
-router.post("/auth/activation", authMiddleware, authController.activation);
-router.get("/dummy", dummyController.dummy);
+router.post("/auth/activation", authController.activation);
 
 
 
